novas atualizações da calculadora

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -16,34 +16,30 @@
       <div class="key" id="function-keys" onclick="clearAll()">C</div>
       <div class="key" id="function-keys" onclick="clearCurrently()">CE</div>
       <div class="key" id="function-keys" onclick="percentage()">%</div>
-      
       <div class="key" id="operators" onclick="getOperator('/')">÷</div>
 
-      <div class="key" id="numbers" onclick="addNumber(9)">9</div>
-      <div class="key" id="numbers" onclick="addNumber(8)">8</div>
       <div class="key" id="numbers" onclick="addNumber(7)">7</div>
-
+      <div class="key" id="numbers" onclick="addNumber(8)">8</div>
+      <div class="key" id="numbers" onclick="addNumber(9)">9</div>
       <div class="key" id="operators" onclick="getOperator('x')">X</div>
 
-      <div class="key" id="numbers" onclick="addNumber(6)">6</div>
-      <div class="key" id="numbers" onclick="addNumber(5)">5</div>
       <div class="key" id="numbers" onclick="addNumber(4)">4</div>
-
+      <div class="key" id="numbers" onclick="addNumber(5)">5</div>
+      <div class="key" id="numbers" onclick="addNumber(6)">6</div>
       <div class="key" id="operators" onclick="getOperator('-')">-</div>
 
-      <div class="key" id="numbers" onclick="addNumber(3)">3</div>
-      <div class="key" id="numbers" onclick="addNumber(2)">2</div>
       <div class="key" id="numbers" onclick="addNumber(1)">1</div>
-
+      <div class="key" id="numbers" onclick="addNumber(2)">2</div>
+      <div class="key" id="numbers" onclick="addNumber(3)">3</div>
       <div class="key" id="operators" onclick="getOperator('+')">+</div>
 
       <div class="key" id="numbers" onclick="addNumber(0)">0</div>
-      <div class="key" id="numbers" onclick="addNumber(0)"></div>
+      <!-- <div class="key" id="numbers" onclick="addNumber(0)"></div> -->
       <div class="key" id="numbers" onclick="addComma()">.</div>
-
       <div class="key" id="operators" onclick="result()">=</div>
+    
     </div>
   </div>
 </body>
-<script src="script.js"></script>
+<script src="new.js"></script>
 </html>
