--- a/calculator/index.html
+++ b/calculator/index.html
@@ -10,7 +10,7 @@
   <div id="app">
     <div class="screen">
       <div id="before"></div>
-      <div id="current"></div>
+      <div id="current">0</div>
     </div>
     <div class="buttons">
       <div class="key" id="function-keys" onclick="clearAll()">C</div>
@@ -35,11 +35,11 @@
 
       <div class="key" id="numbers" onclick="addNumber(0)">0</div>
       <!-- <div class="key" id="numbers" onclick="addNumber(0)"></div> -->
-      <div class="key" id="numbers" onclick="addComma()">.</div>
+      <div class="key" id="numbers" onclick="addNumber('.')">.</div>
       <div class="key" id="operators" onclick="result()">=</div>
     
     </div>
   </div>
 </body>
-<script src="new.js"></script>
+<script src="script.js"></script>
 </html>
